# FSOLG

./: README.md  Scrapper.py
CLI/: CLI.py  README.md  Reqs_for_CLI.md  pyproject.toml
CLI/CLI/cli/: CLI.py
CLI/tests/: test_cli.py
FSOLG/: FSOLG.py  Projector.py  README.md  Reqs_for_CLI.md  Reqs_for_FSOLG.md  Scrapper.py
Logs/Caleb/: FSOLG_3_25_2020.md  FSOLG_3_30_2020.md  FSOLG_3_31_2020.md  FSOLG_4_01_2020.md  FSOLG_4_04_2020.md  FSOLG_4_07_2020.MD  FSOLG_4_08_2020.MD  FSOLG_4_09_2020.MD  FSOLG_4_10_2020.MD  FSOLG_4_11_2020.MD  FSOLG_4_15_2020  FSOLG_4_23_2020.MD  FSOLG_4_30_2020.MD  FSOLG_5_1_2020.MD
Logs/Colin/: FSOLG_4_10_2020.md  FSOLG_4_29_2020.md  FSOLG_4_30_2020.md  FSOLG_5_1-2_2020.md
Machine_Learning/: Projector.py  generator.py
Web_Scraper/: README.md  Reqs_for_Scraper.md  Scrapper.py
