[tool.poetry]
name = "CLI"
version = "0.1.0"
description = ""
authors = ["Colin Heaning <31703049+cheaning@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
funcy = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
